# ELVIS-C

./: .gitignore  ACTIVE_INTERVENTION_DOCUMENTATION.md  Dockerfile  INTERVENTION_DOCUMENTATION.md  INTERVENTION_PAIRS_DOCUMENTATION.md  README.md  example_intervention_dataset.py  pyproject.toml  requirements.txt  test_intervention_generation.py  two_parts_demo_metadata.json
elvis_env/: __init__.py
elvis_env/configs/: default.yaml  diagonal_movement.yaml  freeze_intervention.yaml  high_resolution.yaml  horizontal_movement.yaml  multi_intervention.yaml  quick_test.yaml  rainbow_colors.yaml  red_blue_colors.yaml  reverse_movement.yaml  two_parts_dataset_config.yaml  two_parts_default.yaml  variable_speeds.yaml
elvis_env/envs/: elvis_video_env.py
elvis_env/events/: temporal.py
elvis_env/examples/: ai_interface_examples.py  ai_workflow_example.py  minimal_usage.py
elvis_env/interface/: AI_MODEL_GUIDE.md  AI_QUICK_START.md  README.md  __init__.py  ai_model_interface.py  intervention_interface.py  video_interface.py
elvis_env/io/: export.py
elvis_env/pairing/: make_pairs.py
elvis_env/scripts/: ENVIRONMENT_README.md  active_controllers.py  analyze_active_interventions.py  analyze_causal_effects.py  analyze_parameter_independence.py  demo_environment.py  falling_circles.py  falling_circles_env.py  gen_pairs.py  generate_active_interventions.py  generate_clean_heatmap.py  generate_dataset_pipeline.py  generate_falling_circles_dataset.py  generate_intervention_pairs.py  gp_controller.py  spread_line.py  (+3 more)
src/: config.py  eval_baselines.py  main.py  task_registry.py
(+58 files in other folders)
